[GStreamer] Fix deadlock when shutting down AudioDestination https://bugs.webkit.org/show_bug.cgi?id=139496

Patch by Sebastian Dröge <sebastian@centricular.com> on 2014-12-16
Reviewed by Philippe Normand.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcLoop):
(webKitWebAudioSrcChangeState):
Sometimes we would wait forever for the task to shut down. This
was happening because of a bug in GStreamer that caused joining
a paused task to deadlock.

Canonical link: https://commits.webkit.org/157564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177341 268f45cc-cd09-0410-ab3c-d52691b4dbfc